edits to homepage mobile view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1449,8 +1449,50 @@ animation-delay: 0.7s;
 }
 
 
-/* iPhone 4 and 4S (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px){}
+@media (max-device-width : 320px) {
+    .header-img {
+        visibility: hidden !important;
+    }
+
+    .explore {
+        visibility: hidden !important;
+    }
+
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+        margin-top: 0px !important;
+    }
+
+    .mission {
+        visibility: hidden !important;
+    }
+
+    .cd-fixed-bg.cd-bg-4 {
+        visibility: hidden !important;
+    }
+
+    #head {
+        visibility: hidden !important;
+    }
+
+    center {
+        height: 60px !important;
+    }
+
+    iframe {
+        height: 250px !important;
+        width: inherit;
+    }
+
+    .footer-background {
+        height: 860px;
+        padding-top: 20px
+    }
+
+    #contact h4 {
+        margin-left: 5%;
+    }
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){}
 
 @media (max-width: 768px) {
