add media queries to homepage

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1516,6 +1516,118 @@ animation-delay: 0.7s;
     }
 }
 
+@media (max-device-width : 375px) {
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+        display: block !important;
+    }
+
+    header {
+        visibility: hidden !important;
+    }
+
+    .header-img {
+        visibility: hidden !important;
+    }
+
+    .explore {
+        display: none;
+    }
+
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+        margin-top: 0px !important;
+    }
+
+    .mission {
+        display: none;
+    }
+
+    .cd-fixed-bg.cd-bg-4 {
+        display: none;
+    }
+
+    #head {
+        visibility: hidden !important;
+    }
+
+    .list-inline {
+        display: none;
+    }
+
+    center {
+        height: 60px !important;
+    }
+
+    iframe {
+        height: 250px !important;
+        width: inherit;
+    }
+
+    .footer-background {
+        height: 860px;
+        padding-top: 20px
+    }
+
+    #contact h4 {
+        margin-left: 5%;
+    }
+}
+
+@media (max-device-width : 425px) {
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+        display: block !important;
+    }
+
+    header {
+        visibility: hidden !important;
+    }
+
+    .header-img {
+        visibility: hidden !important;
+    }
+
+    .explore {
+        display: none;
+    }
+
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+        margin-top: 0px !important;
+    }
+
+    .mission {
+        display: none;
+    }
+
+    .cd-fixed-bg.cd-bg-4 {
+        display: none;
+    }
+
+    #head {
+        visibility: hidden !important;
+    }
+
+    .list-inline {
+        display: none;
+    }
+
+    center {
+        height: 60px !important;
+    }
+
+    iframe {
+        height: 250px !important;
+        width: inherit;
+    }
+
+    .footer-background {
+        height: 860px;
+        padding-top: 20px
+    }
+
+    #contact h4 {
+        margin-left: 5%;
+    }
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){}
 
 @media (max-width: 768px) {
