--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,11 +5,10 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 // Import Bootstrap
 @import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
-
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 img {
@@ -19,6 +18,8 @@ img {
 body {
     // background-color: #eee;
     font-family: 'Muli', sans-serif;
+    padding :0;
+    margin:0;
   ul {
     list-style: none;
   }
@@ -334,7 +335,7 @@ border-right: none;
     font-weight: bolder;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+.col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
     display: none !important;
     height: 150px;
     text-align: center;
@@ -345,7 +346,7 @@ border-right: none;
     color: black !important;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
     background-image: url("../images/Tape-blur-3-shade-40.png");
     transition: background-image 1s;
     height: 250px;
@@ -356,7 +357,7 @@ border-right: none;
     }
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-t span {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-t span {
     transition: 1s;
 }
 
@@ -390,14 +391,14 @@ center > h1 {
     color: #f5f5f5;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-t:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-t:hover {
     background-image: url("../images/Tape-blur-3-white-40.png");
     img {
         src:"../images/tape-icon.png";
     }
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-o {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-o {
     background-image: url("../images/hands-blur-4-shade-40.jpg");
     transition: background-image 1s;
     height: 250px;
@@ -405,11 +406,11 @@ center > h1 {
     padding-top: 2em;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-o:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-o:hover {
     background-image: url("../images/hands-blur-4-white-40.jpg");
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-b {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-b {
     background-image: url("../images/drybulk-blur-10-shade-50.jpg");
     transition: background-image 1s;
     height: 250px;
@@ -417,11 +418,11 @@ center > h1 {
     padding-top: 2em;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-b:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-b:hover {
     background-image: url("../images/drybulk-blur-10-white-50.jpg");
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-i {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-i {
     background-image: url("../images/lightindustrial-blur-5-shade-50.png");
     transition: background-image 1s;
     height: 250px;
@@ -429,11 +430,11 @@ center > h1 {
     padding-top: 2em;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-i:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-i:hover {
     background-image: url("../images/lightindustrial-blur-5-white-50.png");
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-c {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-c {
     background-image: url("../images/copackperson-blur-10-cropped-shade-50.jpg");
     transition: background-image 1s;
     height: 250px;
@@ -443,11 +444,11 @@ center > h1 {
     zoom: 1;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-c:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-c:hover {
     background-image: url("../images/copackperson-blur-10-cropped-white-50.jpg");
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-3 {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-3 {
     background-image: url("../images/3pl-person-blur-10-shade-50.jpg");
     transition: background-image 1s;
     height: 250px;
@@ -455,7 +456,7 @@ center > h1 {
     padding-top: 2em;
 }
 
-.col-xs-12.col-sm-6.col-lg-4.product-button.sr-3:hover {
+.col-xs-12.col-sm-12.col-lg-4.product-button.sr-3:hover {
     background-image: url("../images/3pl-person-blur-10-white-50.jpg");
 }
 // .sr-o a{
@@ -640,8 +641,9 @@ iframe {
 }
 
 .speedway-is {
-    border: 2px solid #fff;
-    border-radius: 55px;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    // border-radius: 55px;
     margin: 0px;
     padding-bottom: 25px;
     background-color: #155131;
@@ -649,10 +651,10 @@ iframe {
     width: 500px;
 }
 
-h1.speedway-is:hover {
-    border: 2px solid #9097a9;
-    color: #9097a9;
-}
+// h1.speedway-is:hover {
+//     // border: 2px solid #9097a9;
+//     color: #9097a9;
+// }
 
 .bottom-tag {
     padding-top: 20px;
@@ -755,13 +757,6 @@ h1.fade-in.sup-context {
     left: 44% !important;
 }
 
-.col-xs-12.col-sm-12.col-md-6.col-lg-6 {
-    // background-color: #7b0e0e;
-    color: #fff;
-    padding-top: 20px;
-    padding-bottom: 35px;
-}
-
 .col-md-2 {
     margin: 0 auto;
     border-radius: 55px;
@@ -788,10 +783,6 @@ h1.fade-in.sup-context {
     height: 280px;
 }
 
-.col-md-6 {
-    // padding: 0 30px 12px;
-    // margin-bottom: 2em;
-}
 
 .footer-filler > p > a > strong {
     color: black;
@@ -1358,27 +1349,6 @@ animation-delay: 0.7s;
 // media queries
 
 @media (max-width: 1119px) {
-    .list-inline > li {
-        font-size: 17px;
-    }
-    .list-inline {
-        padding-top: 4%;
-    }
-    .list-inline > li > a {
-        font-size: 20px;
-        padding: 0;
-    }
-    .logoHolder a img {
-        max-width: 85%;
-    }
-    .header-h1 {
-        left: 100px;
-    }
-    p.product-description {
-        padding-left: 10px;
-        padding-right: 10px;
-        font-size: 14px;
-    }
     .InputName {
         width: 100%;
     }
@@ -1399,25 +1369,6 @@ animation-delay: 0.7s;
     #contact label {
         margin: 0;
         font-size: 14px;
-    }
-    .footer-background {
-        height: 550px;
-    }
-    iframe {
-        height: 481px;
-    }
-}
-
-@media (max-width: 1046px) {
-    .list-inline > li {
-        font-size: 14px;
-    }
-    .list-inline {
-        padding-top: 4%;
-    }
-
-    .logoHolder a img {
-        max-width: 75%;
     }
 }
 
@@ -1461,7 +1412,7 @@ animation-delay: 0.7s;
 
 
 @media (max-device-width : 320px) {
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+    .col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
         display: block !important;
     }
 
@@ -1477,7 +1428,7 @@ animation-delay: 0.7s;
         display: none;
     }
 
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+    .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
         margin-top: 0px !important;
     }
 
@@ -1517,7 +1468,7 @@ animation-delay: 0.7s;
 }
 
 @media (max-device-width : 375px) {
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+    .col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
         display: block !important;
     }
 
@@ -1533,7 +1484,7 @@ animation-delay: 0.7s;
         display: none;
     }
 
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+    .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
         margin-top: 0px !important;
     }
 
@@ -1573,7 +1524,7 @@ animation-delay: 0.7s;
 }
 
 @media (max-device-width : 425px) {
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-call {
+    .col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
         display: block !important;
     }
 
@@ -1589,7 +1540,7 @@ animation-delay: 0.7s;
         display: none;
     }
 
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+    .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
         margin-top: 0px !important;
     }
 
@@ -1628,132 +1579,132 @@ animation-delay: 0.7s;
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){}
-
-@media (max-width: 768px) {
-    #head {
-        max-width: 100%;
-        width:100%;
-        // transform:translateX(-50%);
-    }
-
-    .logoHolder a {
-        padding: 0 0 0 0.4em;
-    }
-
-    .InputName {
-        width: 100%;
-    }
-
-    center {
-        height: 0px;
-    }
-
-    center > h1 {
-        visibility: hidden;
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-
-    .cd-fixed-bg.cd-bg-1.header-img {
-        visibility: hidden;
-        min-height: 0%;
-    }
-
-    .logoHolder a img {
-        max-width: 100%;
-        left: 65%;
-    }
-
-    .list-inline {
-        visibility: hidden;
-    }
-
-    .list-inline > li:last-child {
-        visibility: visible;
-        font-size: 20px;
-        position: absolute;
-        top: 4em;
-        left: 38%;
-    }
-
+@media (max-device-width : 768px) {
     .container-fluid {
-        padding-top: 0;
+        padding-top: 0px !important;
+        height: 0px !important;
     }
 
-    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
-        margin-top: 115px;
+    .col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
+        display: block !important;
+        // left: 22em !important;
     }
 
-    // .header-h1 {
-    //     padding-top: 100px;
-    // }
+    header {
+        visibility: hidden !important;
+    }
 
-    #contact {
-        padding-left: 20px;
-        margin-left: 0;
-        margin-top: 0;
+    .header-img {
+        visibility: hidden !important;
+    }
+
+    .explore {
+        display: none;
+    }
+
+    .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
+        margin-top: 0px !important;
+    }
+
+    .mission {
+        display: none;
     }
 
     .cd-fixed-bg.cd-bg-4 {
-        visibility: hidden;
-        min-height: 0%;
-        background-size: 0%;
+        display: none;
     }
 
-    .speedway-is {
-        margin: 0px;
+    #head {
+        visibility: hidden !important;
     }
 
-    .footer-filler p {
-        line-height: 30px;
-        width: 290px;
-        padding-left: 30px;
+    .list-inline {
+        display: none;
     }
 
-    .footer-filler {
-        margin-bottom: 0;
-        padding-left: 5px;
+    center {
+        height: 60px !important;
     }
 
-    .InputMessage {
-        width: 100%;
+    iframe {
+        height: 250px !important;
+        width: inherit !important;
     }
 
-    label.InputMessage {
-        margin-bottom: 0;
+    .footer-background {
+        height: 860px !important;
+        padding-top: 20px
     }
 
-    .InputCompany {
-        width: 100%;
-        margin-left: 0;
-    }
-
-    .InputEmail {
-        width: 100%;
-    }
-
-    .InputPhone {
-        width: 100%;
-        margin-left: 0;
-    }
-
-    #contact label {
-        margin-left: 0px;
-    }
-
-    .address {
-        width: 295px;
-        // right: 2.5em;
-        margin-top: 5px;
-        text-align: center;
-        padding-left: 40px;
-    }
-
-    h4 {
-        margin-left: 24%;
+    #contact h4 {
+        margin-left: 5%;
     }
 }
+
+@media (max-device-width : 1024px) {
+    .container-fluid {
+        padding-top: 0px !important;
+        height: 0px !important;
+    }
+
+    .col-xs-12.col-sm-12.col-md-12.product-button.sr-call {
+        display: block !important;
+    }
+
+    header {
+        visibility: hidden !important;
+    }
+
+    .header-img {
+        visibility: hidden !important;
+    }
+
+    .explore {
+        display: none;
+    }
+
+    .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
+        margin-top: 0px !important;
+    }
+
+    .mission {
+        display: none;
+    }
+
+    .cd-fixed-bg.cd-bg-4 {
+        display: none;
+    }
+
+    #head {
+        visibility: hidden !important;
+    }
+
+    .list-inline {
+        display: none;
+    }
+
+    center {
+        height: 60px !important;
+    }
+
+    iframe {
+        height: 450px;
+        width: 450px;
+    }
+
+    .footer-background {
+        height: inherit !important;
+        padding-top: 20px
+    }
+
+    #contact h4 {
+        margin-left: 5%;
+    }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){}
+
+
 
 // /* iPhone 5 and 5S (portrait and landscape) ----------- */
 // @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
