--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -342,8 +342,16 @@ border-right: none;
     padding-top: 0.5em;
 }
 
+.hide {
+    visibility: hidden;
+}
+
 .black-text {
     color: black !important;
+}
+
+.white-text {
+    color: #fff !important;
 }
 
 .col-xs-12.col-sm-12.col-lg-4.product-button.sr-t {
@@ -633,6 +641,22 @@ h3, .h3 {
 iframe {
     height: 300px;
     width: 540px;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .tape-video {
@@ -1349,6 +1373,14 @@ animation-delay: 0.7s;
 // media queries
 
 @media (max-width: 1119px) {
+    .tape-video {
+        visibility: visible !important;
+        height: auto;
+        width: auto;
+    }
+
+
+
     .InputName {
         width: 100%;
     }
@@ -1400,8 +1432,56 @@ animation-delay: 0.7s;
     }
 }
 
+.mobile-320 {
+    display: block;
+    visibility: visible !important;
+}
 
 @media (max-device-width : 320px) {
+    .supporting-product-description {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .light {
+        background-color: #f5f5f5;
+        padding: 0;
+    }
+
+    .dark {
+        background-color: #155131;
+    }
+
+    .sup-context {
+        color: black;
+        font-size: 1.3em;
+    }
+
+    .tape-action-container {
+        height: 355px;
+    }
+
+    .bottom-tag {
+        text-align: center;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .action.tape-action-container.mobile-320 {
+        border-top: 3px groove black;
+    }
+
+    h2.project-managers.tape-action {
+        font-size: .7em;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .tape-video {
+        visibility: visible !important;
+        height: 170px !important;
+        width: 290px !important;
+    }
     .header-h1 {
         display: none !important;
     }
