--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -55,6 +55,11 @@ body {
     padding-left: 20px !important;
 }
 
+.padding-left-right-10 {
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+}
+
 .list-inline {
     float: right;
     vertical-align: middle;
@@ -348,6 +353,11 @@ border-right: none;
 
 .black-text {
     color: black !important;
+}
+
+.no-border-or-margin {
+    border: none !important;
+    margin-top: 0px !important;
 }
 
 .white-text {
@@ -660,8 +670,8 @@ iframe {
 }
 
 .tape-video {
-    width: 550px !important;
-    height: 400px !important;
+    width: 550px;
+    height: 400px;
 }
 
 .speedway-is {
@@ -794,12 +804,6 @@ h1.fade-in.sup-context {
 .middle-border {
     border-radius: 42px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.35);
-}
-
-.light {
-    background-color: #fff;
-    padding: 55px 0 55px 0;
-    text-align: center;
 }
 
 .col-md-4 img {
@@ -1432,12 +1436,52 @@ animation-delay: 0.7s;
     }
 }
 
-.mobile-320 {
+.mobile {
     display: block;
     visibility: visible !important;
 }
 
 @media (max-device-width : 320px) {
+    // .padding-top-20 {
+    //     padding-top: 20px !important;
+    // }
+
+    // .light {
+    //     background-color: #fff;
+    //     padding: 55px 0 55px 0;
+    //     text-align: center;
+    // }
+
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
+        padding-bottom: 15px;
+    }
+
+    .groove-border {
+        border-top: 3px groove black;
+    }
+
+    .bulk-center-padding-top {
+        padding-top: 50px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .action.bulk-action-container.mobile > .row > .col-md-6.bottom-tag.no-top-padding.bulk-project {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
+    }
+
+    .bulk-action-container {
+        height: 400px;
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .action.tape-action-container {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
     .supporting-product-description {
         border-top: 2px groove black;
         margin-top: 25px;
@@ -1463,11 +1507,11 @@ animation-delay: 0.7s;
 
     .bottom-tag {
         text-align: center;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
     }
 
-    .action.tape-action-container.mobile-320 {
+    .action.tape-action-container.mobile {
         border-top: 3px groove black;
     }
 
@@ -1479,12 +1523,14 @@ animation-delay: 0.7s;
 
     .tape-video {
         visibility: visible !important;
-        height: 170px !important;
-        width: 290px !important;
+        height: 170px;
+        width: 290px;
     }
+
     .header-h1 {
         display: none !important;
     }
+
     header#head {
         width: 320px !important;
     }
@@ -1535,7 +1581,7 @@ animation-delay: 0.7s;
         height: 60px !important;
     }
 
-    iframe {
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 > iframe {
         height: 250px !important;
         width: inherit;
     }
@@ -1548,15 +1594,117 @@ animation-delay: 0.7s;
     #contact h4 {
         margin-left: 5%;
     }
+
     #contact {
-        padding-left: 3% !important;
+        padding-left: 20px;
+        padding-right: 20px;
     }
+
     .InputPhone {
         width: 100% !important;
     }
 }
 
+@media screen and (min-width:320px) and (max-width:375px) {
+    // .tape-video {
+    //     height: 220px;
+    //     width: 350px;
+    // }
+}
+
 @media (max-device-width : 375px) {
+
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
+        padding-bottom: 15px;
+    }
+
+    .light {
+        background-color: #fff;
+        padding: 55px 0 55px 0;
+        text-align: center;
+    }
+
+    .groove-border {
+        border-top: 3px groove black;
+    }
+
+    .bulk-center-padding-top {
+        padding-top: 50px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .action.bulk-action-container.mobile > .row > .col-md-6.bottom-tag.no-top-padding.bulk-project {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
+    }
+
+    .bulk-action-container {
+        height: 400px;
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .action.tape-action-container {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .supporting-product-description {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .light {
+        background-color: #f5f5f5;
+        padding: 0;
+    }
+
+    .dark {
+        background-color: #155131;
+    }
+
+    div#contact {
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .sup-context {
+        color: black;
+        font-size: 1.3em;
+    }
+
+    // .smaller-font {
+    //     font-size: .93em;
+    // }
+
+    .tape-action-container {
+        height: 395px;
+    }
+
+    .bottom-tag {
+        text-align: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .action.tape-action-container.mobile {
+        border-top: 3px groove black;
+    }
+
+    h2.project-managers.tape-action {
+        font-size: .9em;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .tape-video {
+        visibility: visible !important;
+        // height: 220px;
+        // width: 350px;
+    }
+
     .header-h1 {
         display: none !important;
     }
@@ -1601,7 +1749,7 @@ animation-delay: 0.7s;
         height: 60px !important;
     }
 
-    iframe {
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 > iframe {
         height: 250px !important;
         width: inherit;
     }
@@ -1613,13 +1761,106 @@ animation-delay: 0.7s;
 
     #contact h4 {
         margin-left: 5%;
-    }
-    #contact {
-        padding-left: 2% !important;
     }
 }
 
 @media (max-device-width : 425px) {
+
+    .product-header {
+        font-size: 2em;
+    }
+
+    .product-description {
+        font-size: 16px;
+    }
+
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
+        padding-bottom: 15px;
+    }
+
+    // .light {
+    //     background-color: #fff;
+    //     padding: 55px 0 55px 0;
+    //     text-align: center;
+    // }
+
+    .groove-border {
+        border-top: 3px groove black;
+    }
+
+    .bulk-center-padding-top {
+        padding-top: 50px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .action.bulk-action-container.mobile > .row > .col-md-6.bottom-tag.no-top-padding.bulk-project {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
+    }
+
+    .bulk-action-container {
+        height: 400px;
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .action.tape-action-container {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .supporting-product-description {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .light {
+        background-color: #f5f5f5;
+        padding: 0;
+    }
+
+    .dark {
+        background-color: #155131;
+    }
+
+    div#contact {
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .sup-context {
+        color: black;
+        font-size: 1.5em;
+    }
+
+    .tape-action-container {
+        height: 335px;
+    }
+
+    .bottom-tag {
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .action.tape-action-container.mobile {
+        border-top: 3px groove black;
+    }
+
+    h2.project-managers.tape-action {
+        font-size: .9em;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .tape-video {
+        visibility: visible !important;
+        // height: 220px;
+        // width: 350px;
+    }
+
     .header-h1 {
         display: none !important;
     }
@@ -1664,7 +1905,7 @@ animation-delay: 0.7s;
         height: 60px !important;
     }
 
-    iframe {
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 > iframe {
         height: 250px !important;
         width: inherit;
     }
@@ -1677,15 +1918,116 @@ animation-delay: 0.7s;
     #contact h4 {
         margin-left: 5%;
     }
-    #contact {
-        padding-left: 4% !important;
-    }
 }
 
 @media (max-device-width : 768px) {
+
+    .product-header {
+        font-size: 2em;
+    }
+
+    .product-description {
+        font-size: 16px;
+    }
+
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
+        padding-bottom: 15px;
+    }
+
+    // .light {
+    //     background-color: #fff;
+    //     padding: 55px 0 55px 0;
+    //     text-align: center;
+    // }
+
+    .groove-border {
+        border-top: 3px groove black;
+    }
+
+    .bulk-center-padding-top {
+        padding-top: 50px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .action.bulk-action-container.mobile > .row > .col-md-6.bottom-tag.no-top-padding.bulk-project {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
+    }
+
+    .bulk-action-container {
+        height: 400px;
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .action.tape-action-container {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .supporting-product-description {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .light {
+        background-color: #f5f5f5;
+        padding: 0;
+    }
+
+    .dark {
+        background-color: #155131;
+    }
+
+    div#contact {
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .sup-context {
+        color: black;
+        font-size: 1.5em;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile, p.supporting-product-description.fade-in.sup-context.mobile.smaller-font {
+        padding-top: 20px;
+        line-height: 28px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .tape-action-container {
+        height: 285px;
+    }
+
+    .bottom-tag {
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .action.tape-action-container.mobile {
+        border-top: 3px groove black;
+    }
+
+    h2.project-managers.tape-action {
+        font-size: .9em;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .tape-video {
+        visibility: visible !important;
+        // height: 220px;
+        // width: 350px;
+    }
+
     .header-h1 {
         display: none !important;
     }
+
     .container-fluid {
         padding-top: 0px !important;
         height: 0px !important;
@@ -1732,7 +2074,7 @@ animation-delay: 0.7s;
         height: 60px !important;
     }
 
-    iframe {
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 > iframe {
         height: 250px !important;
         width: inherit !important;
     }
@@ -1745,12 +2087,123 @@ animation-delay: 0.7s;
     #contact h4 {
         margin-left: 5%;
     }
-    #contact {
-        padding-left: 3% !important;
-    }
+
 }
 
 @media (max-device-width : 1024px) {
+
+    .supporting-description {
+        padding: 80px 0px 40px 0px;
+        height: 30.2em;
+        background-color: #155131;
+    }
+
+    .product-header {
+        font-size: 2em;
+    }
+
+    .product-description {
+        font-size: 16px;
+    }
+
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 {
+        padding-bottom: 15px;
+    }
+
+    // .light {
+    //     background-color: #fff;
+    //     padding: 55px 0 55px 0;
+    //     text-align: center;
+    // }
+
+    .groove-border {
+        border-top: 3px groove black;
+    }
+
+    .bulk-center-padding-top {
+        padding-top: 50px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .action.bulk-action-container.mobile > .row > .col-md-6.bottom-tag.no-top-padding.bulk-project {
+        padding-right: 5px !important;
+        padding-left: 5px !important;
+    }
+
+    .bulk-action-container {
+        height: 400px;
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .action.tape-action-container {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .supporting-product-description {
+        border-top: 2px groove black;
+        margin-top: 25px;
+    }
+
+    .light {
+        background-color: #f5f5f5;
+        padding: 0;
+    }
+
+    .dark {
+        background-color: #155131;
+    }
+
+    div#contact {
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .sup-context {
+        color: black;
+        font-size: 1.5em;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile, p.supporting-product-description.fade-in.sup-context.mobile.smaller-font {
+        // padding-top: 20px;
+        line-height: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .tape-action-container {
+        height: 185px;
+    }
+
+    .bottom-tag {
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .action.tape-action-container.mobile {
+        border-top: 3px groove black;
+    }
+
+    h2.project-managers.tape-action {
+        font-size: .9em;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .tape-video {
+        visibility: visible !important;
+        // height: 220px;
+        // width: 350px;
+    }
+
+    .header-h1 {
+        display: none !important;
+    }
+
     .container-fluid {
         padding-top: 0px !important;
         height: 0px !important;
@@ -1796,7 +2249,7 @@ animation-delay: 0.7s;
         height: 60px !important;
     }
 
-    iframe {
+    .col-xs-12.col-sm-12.col-md-6.col-lg-6.padding-left-right-20 > iframe {
         height: 450px;
         width: 450px;
     }
@@ -1806,21 +2259,61 @@ animation-delay: 0.7s;
         padding-top: 20px
     }
 
+    .tape-call-button {
+        padding-top: 0px !important;
+    }
+
     #contact h4 {
         margin-left: 5%;
     }
 }
 
+@media (min-device-width : 1224px) {
+
+    .list-inline > li {
+        font-size: 21px;
+    }
+}
+
 @media (min-device-width : 1440px) {
+
+    .list-inline > li {
+        font-size: 21px;
+    }
+
     .header-h1 {
         left: 3.4em;
     }
+
+    .InputCompany {
+        width: 22em;
+        border-radius: 5px;
+        float: left;
+        margin-left: 2em;
+    }
+
+    .InputPhone {
+        width: 17.3em;
+        border-radius: 5px;
+        float: left;
+        margin-left: 2em;
+    }
+
+    .InputMessage {
+        width: 42.5em;
+        border-radius: 5px;
+        margin-bottom: 20px;
+        clear: both;
+    }
+
     iframe {
         width: 640px;
     }
+
     #contact {
         padding-left: 50px;
     }
+
     .footer-background {
         height: 430px;
     }
@@ -1843,12 +2336,6 @@ animation-delay: 0.7s;
     iframe {
         height: 350px;
         width: 840px;
-    }
-}
-
-@media (min-device-width : 1224px) {
-    .list-inline > li {
-        font-size: 17px;
     }
 }
 
