--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1389,8 +1389,6 @@ animation-delay: 0.7s;
         width: auto;
     }
 
-
-
     .InputName {
         width: 100%;
     }
@@ -1459,30 +1457,67 @@ animation-delay: 0.7s;
     //     text-align: center;
     // }
 
+    .supporting-pl-column {
+        height: auto;
+        padding: 5px 15px 5px 15px !important;
+    }
+
+    .supporting-center {
+        padding-bottom: 40px;
+    }
+
+    .product-header {
+        font-size: 175%;
+    }
+
+    small, .small {
+        font-size: 100%;
+    }
+
+    .container-fluid {
+        height: auto;
+        padding-top: 0px;
+    }
+
+    h3.fade-in.sup-context.margin-top-6.mobile {
+        margin-top: 20px !important;
+        line-height: 135%;
+    }
+
     p.supporting-product-description.fade-in.larger-font.sup-context.top-padding-7.mobile {
         padding-top: 2em !important;
         font-size: 130%;
-        line-height: 120%;
+        line-height: 125%;
+        font-weight: 200;
+        letter-spacing: 2px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .supporting-description.assembly-descript > .supporting-assembly-column {
         height: auto;
+        padding: 5px 15px 5px 15px !important;
     }
 
     h1.fade-in.sup-context {
+        text-align: center;
         font-size: 130%;
         line-height: 130%;
         margin-top: 2em;
+        font-weight: 600;
     }
 
     .assembly-action {
         height: auto !important;
-        margin-top: 1.6em;
+        margin-top: 1.2em;
     }
 
     .col-xs-12.col-sm-12.col-md-6.col-lg-6.supporting-co-column-1 > center.supporting-center-co > h2.supporting-product-description.fade-in.sup-context.mobile {
+        padding-left: 15px;
+        padding-right: 15px;
         border-top: none;
         margin-top: 0;
+        text-align: center;
     }
 
     .co-m {
@@ -1508,12 +1543,12 @@ animation-delay: 0.7s;
 
     p.supporting-product-description.fade-in.sup-context.padding-top-25.mobile.pl-support {
         font-size: 80%;
-        margin-top: 75%;
+        margin-top: 40%;
         line-height: 120%;
     }
 
     .action.mobile.pl-container {
-        margin-top: 5em;
+        margin-top: 4em;
     }
 
     .row.light.not {
@@ -1656,7 +1691,7 @@ animation-delay: 0.7s;
     }
 
     .footer-background {
-        height: 860px;
+        height: auto;
         padding-top: 20px
     }
 
@@ -1674,14 +1709,11 @@ animation-delay: 0.7s;
     }
 }
 
-@media screen and (min-width:320px) and (max-width:375px) {
+@media (max-width:375px) and (min-width:321px) {
     // .tape-video {
     //     height: 220px;
     //     width: 350px;
     // }
-}
-
-@media (max-device-width : 375px) {
 
     .row.light.not {
         visibility: hidden;
@@ -1896,13 +1928,10 @@ animation-delay: 0.7s;
     }
 }
 
-@media (max-device-width : 425px) and (min-device-width : 375px) {
+@media (max-device-width : 425px) and (min-device-width : 376px) {
     .tape-action-container {
         height: 335px;
     }
-}
-
-@media (max-device-width : 425px) {
 
     .assembly-project {
         padding-left: 5px !important;
@@ -2133,9 +2162,6 @@ animation-delay: 0.7s;
     .tape-action-container {
         height: 285px;
     }
-}
-
-@media (max-device-width : 768px) {
 
     .mobile2 {
         display: block;
@@ -2393,9 +2419,6 @@ animation-delay: 0.7s;
     .tape-action-container {
         height: 185px;
     }
-}
-
-@media (max-device-width : 1024px) {
 
     .supporting-description {
         padding: 80px 0px 40px 0px;
@@ -2567,7 +2590,7 @@ animation-delay: 0.7s;
     }
 }
 
-@media (max-device-width : 1224px) {
+@media (max-device-width : 1224px) and (min-device-width : 1025px) {
 
     .header-h1 {
         left: 2.4em;
@@ -2594,7 +2617,7 @@ animation-delay: 0.7s;
     }
 }
 
-@media (min-device-width : 1440px) {
+@media (min-device-width : 1440px) and (min-device-width : 1225px){
 
     .list-inline > li {
         font-size: 21px;
@@ -2706,7 +2729,7 @@ animation-delay: 0.7s;
 
 }
 
-@media (min-device-width : 2048px) {
+@media (min-device-width : 2048px) and (min-device-width : 1441px) {
 
     h2.project-managers {
         margin-right: 150px;
